# ccswitcher

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: build-winui.yml  release.yml
docs/: spec.md
docs/plans/: 20260622-ccswitcher.md  20260622-winui3-rewrite.md  20260710-env-editor.md
docs/plans/completed/: 20260622-ccswitcher.md  20260622-winui3-rewrite.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/core/: atomic.rs  claude_paths.rs  config_store.rs  credential_store.rs  env_builder.rs  import.rs  mod.rs  model.rs  proxy.rs  secret_store.rs  settings_env.rs  switcher.rs  user_config.rs
src-winui/: CCSwitcher.sln
src-winui/CCSwitcher/: App.xaml  App.xaml.cs  CCSwitcher.csproj  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  StartupManager.cs  TrayIcon.cs  app.manifest
src-winui/CCSwitcher.Tests/: CCSwitcher.Tests.csproj
src-winui/CCSwitcher.Tests/Core/: AccountManagerTests.cs  AtomicFileTests.cs  ConfigStoreTests.cs  CredentialStoreTests.cs  EnvBuilderTests.cs  ImporterTests.cs  ModelsTests.cs  ProxyTests.cs  SecretStoreTests.cs  SecretsTests.cs  SettingsEnvTests.cs  SwitcherTests.cs  UserConfigTests.cs
src-winui/CCSwitcher/Core/: AccountManager.cs  AtomicFile.cs  ClaudePaths.cs  ConfigStore.cs  CredentialStore.cs  EnvBuilder.cs  Importer.cs  Models.cs  Proxy.cs  SecretStore.cs  Secrets.cs  SettingsEnv.cs  Switcher.cs  UserConfig.cs
