[package]
name = "ccswitcher"
version = "0.1.0"
description = "Claude Code account switcher tray app"
authors = ["ayrat404"]
edition = "2021"
rust-version = "1.77"

# The library crate holds the platform-agnostic core plus the Tauri glue.
# Splitting bin/lib lets `cargo test` exercise the core without a webview.
[lib]
name = "ccswitcher_lib"
crate-type = ["lib"]

[[bin]]
name = "ccswitcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["windows-native", "apple-native"] }
dirs = "5"
thiserror = "1"
tempfile = "3"
tokio = { version = "1", features = ["sync"] }
regex = "1"

[features]
# `custom-protocol` is the standard Tauri release feature toggle.
custom-protocol = ["tauri/custom-protocol"]
